add playback buttons

--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -10,6 +10,11 @@
 <body>
 	<div class="main">
 		<div id="player"></div>
+		<div>
+			<button id="stop-btn">STOP</button>
+			<button id="pause-btn">PAUSE</button>
+			<button id="play-btn">PLAY</button>
+		</div>
 	</div>
 	<script src="js/player.js"></script>
 </body>
